unpackaged/main/default/objects/Central_Reservations_Request__c/Central_Reservations_Request__c.object-meta.xml
<CustomObject>
    <label>Central Reservations Request</label>
    <nameField>
        <displayFormat>CRR-{000000}</displayFormat>
        <label>Central Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Central Reservations Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>