unpackaged/main/default/objects/Central_Reservations_Request__c/fields/CRR_Current_Sales_Status__c.field-meta.xml
<CustomField>
    <fullName>CRR_Current_Sales_Status__c</fullName>
    <label>Current Sales Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>