unpackaged/main/default/objects/Central_Reservations_Request__c/fields/CRR_Date_Released__c.field-meta.xml
<CustomField>
    <fullName>CRR_Date_Released__c</fullName>
    <label>Date Released</label>
    <type>Date</type>
</CustomField>