unpackaged/main/default/objects/Central_Reservations_Request__c/fields/CRR_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CRR_Opportunity__c</fullName>
    <formula>CRR_Project_Central_Show__r.Opportunity_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>