unpackaged/main/default/objects/Central_Reservations_Request__c/fields/CRR_Production_City__c.field-meta.xml
<CustomField>
    <fullName>CRR_Production_City__c</fullName>
    <label>Production City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>LV</fullName>
            </value>
            <value>
                <fullName>NJ</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>PX</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>SD</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>SL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>