unpackaged/main/default/objects/Central_Reservations_Request__c/fields/CRR_Production_Location__c.field-meta.xml
<CustomField>
    <fullName>CRR_Production_Location__c</fullName>
    <formula>CRR_Project_Central_Show__r.Production_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production Location</label>
    <type>Text</type>
</CustomField>