unpackaged/main/default/objects/Central_Reservations_Request__c/fields/CRR_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>CRR_Sales_Manager__c</fullName>
    <formula>CRR_Project_Central_Show__r.Opportunity__r.Owner.FirstName +&quot;&quot;+ CRR_Project_Central_Show__r.Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager</label>
    <type>Text</type>
</CustomField>