unpackaged/main/default/objects/Central_Reservations_Request__c/fields/CRR_Show_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CRR_Show_End_Date__c</fullName>
    <formula>CRR_Project_Central_Show__r.Show_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show End Date</label>
    <type>Date</type>
</CustomField>