unpackaged/main/default/objects/Central_Reservations_Request__c/recordTypes/Amp_Request.recordType-meta.xml
<RecordType>
    <fullName>Amp_Request</fullName>
    <active>true</active>
    <label>Amp Request</label>
</RecordType>