unpackaged/main/default/objects/Central_Reservations_Request__c/recordTypes/Fit_Request.recordType-meta.xml
<RecordType>
    <fullName>Fit_Request</fullName>
    <active>true</active>
    <label>Fit Request</label>
</RecordType>