unpackaged/main/default/objects/Central_Reservations_Request__c/recordTypes/Wedge_Counter_Request.recordType-meta.xml
<RecordType>
    <fullName>Wedge_Counter_Request</fullName>
    <active>true</active>
    <label>Wedge Counter Request</label>
</RecordType>