unpackaged/main/default/objects/Central_Reservations_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CRR_Status__c</columns>
    <columns>CRR_Request_Type__c</columns>
    <columns>CRR_Wedge_Counter_Quantity__c</columns>
    <columns>CRR_Wedge_Counter_RGB_Color__c</columns>
    <columns>CRR_Show_Start_Date__c</columns>
    <columns>CRR_Show_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>