unpackaged/main/default/objects/Central_Reservations_Request__c/listViews/Central_Reservations_Queue_Central_Reservations_Request.listView-meta.xml
<ListView>
    <fullName>Central_Reservations_Queue_Central_Reservations_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>Central Reservations Queue</label>
    <queue>Central_Reservations_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>