unpackaged/main/default/objects/Central_Reservations_Request__c/listViews/X01_Submitted_Requests.listView-meta.xml
<ListView>
    <fullName>X01_Submitted_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRR_Status__c</field>
        <operation>equals</operation>
        <value>Submited</value>
    </filters>
    <label>01: Submitted Requests</label>
</ListView>