unpackaged/main/default/objects/Central_Reservations_Request__c/listViews/X01a_My_Requests.listView-meta.xml
<ListView>
    <fullName>X01a_My_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>01a: My Requests</label>
</ListView>