unpackaged/main/default/objects/Central_Reservations_Request__c/listViews/X02_Rejected_Requests.listView-meta.xml
<ListView>
    <fullName>X02_Rejected_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRR_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>02: Rejected Requests</label>
</ListView>