unpackaged/main/default/objects/Central_Reservations_Request__c/listViews/X03_Recently_Completed_Requests.listView-meta.xml
<ListView>
    <fullName>X03_Recently_Completed_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRR_Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>CRR_Show_Start_Date__c</field>
        <operation>equals</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <label>03: Recently Completed Requests</label>
</ListView>