unpackaged/main/default/objects/Central_Reservations_Request__c/listViews/X04_Unsubmitted_Requests.listView-meta.xml
<ListView>
    <fullName>X04_Unsubmitted_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CRR_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>04: Unsubmitted Requests</label>
</ListView>